--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h3>RULES</h3>
           <img src="./images/icon-close.svg" alt="close icon" id="close-icon" />
         </div>
-        <img src="./images/image-rules.svg" alt="" />
+        <img src="./images/image-rules.svg"/>
       </div>
     </div>
     <script src="./script.js"></script>
